// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component: SectionButton renders 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessible={true}
    collapsable={false}
    focusable={false}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "row",
        "opacity": 1,
        "paddingVertical": 16,
      }
    }
  >
    <Text
      style={
        [
          [
            {
              "color": "#25282D",
            },
            {
              "fontFamily": "Poppins-SemiBold",
              "fontSize": 16,
              "fontStyle": "normal",
              "fontWeight": "600",
              "letterSpacing": 0.0015,
              "lineHeight": 24,
              "textAlign": "left",
            },
          ],
          {
            "flex": 1,
          },
        ]
      }
    >
      label
    </Text>
    <Text
      allowFontScaling={true}
      selectable={false}
      style={
        [
          {
            "color": "#25282D",
            "fontSize": 24,
          },
          undefined,
          {
            "fontFamily": "FontAwesome",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          {},
        ]
      }
    >
      
    </Text>
  </View>
</View>
`;

exports[`component: SectionButton renders left icon 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessible={true}
    collapsable={false}
    focusable={false}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "row",
        "opacity": 1,
        "paddingVertical": 16,
      }
    }
  >
    <Image
      resizeMode="contain"
      source={
        {
          "testUri": "../../../src/assets/images/desmosIcon.png",
        }
      }
      style={
        {
          "height": 24,
          "marginRight": 8,
          "width": 24,
        }
      }
    />
    <Text
      style={
        [
          [
            {
              "color": "#25282D",
            },
            {
              "fontFamily": "Poppins-SemiBold",
              "fontSize": 16,
              "fontStyle": "normal",
              "fontWeight": "600",
              "letterSpacing": 0.0015,
              "lineHeight": 24,
              "textAlign": "left",
            },
          ],
          {
            "flex": 1,
          },
        ]
      }
    >
      label
    </Text>
    <Text
      allowFontScaling={true}
      selectable={false}
      style={
        [
          {
            "color": "#25282D",
            "fontSize": 24,
          },
          undefined,
          {
            "fontFamily": "FontAwesome",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          {},
        ]
      }
    >
      
    </Text>
  </View>
</View>
`;
